this should fix all system lnfs on java 17